remove hardcoded version of app server in js build + fix app server plugin version problem
git-svn-id: https://svn.exoplatform.org/projects/tools/trunk@11140 42d3c691-033b-0410-95b4-af486b8189e5